[gd_scene load_steps=7 format=3 uid="uid://ly250la7xsji"]

[ext_resource type="Texture2D" uid="uid://8heor5yml8xx" path="res://assets/circle-white.png" id="1_lpekj"]
[ext_resource type="Script" path="res://scripts/special_attack.gd" id="1_xubqt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p8mqk"]
radius = 76.0

[sub_resource type="Animation" id="Animation_h2pjs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_m3skv"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.533333), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gdov2"]
_data = {
"RESET": SubResource("Animation_h2pjs"),
"fade_out": SubResource("Animation_m3skv")
}

[node name="SpecialAttack" type="Area2D" groups=["special_attack"]]
scale = Vector2(2.5, 2.5)
script = ExtResource("1_xubqt")

[node name="EffectTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.3, 1, 0.883333, 0.666667)
texture = ExtResource("1_lpekj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_p8mqk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gdov2")
}

[connection signal="timeout" from="EffectTimer" to="." method="_on_effect_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
